--- a/auto reloader/manifest.json
+++ b/auto reloader/manifest.json
@@ -16,7 +16,7 @@
 	"background": {
 	  "service_worker": "background.js"
 	},
-	"permissions": ["tabs","storage"],
+	"permissions": ["tabs"],
 	"content_scripts": [
 		{
 		"matches": ["http://*/*", "https://*/*" ],
